--- a/.github/workflows/docker-image-simple.yml
+++ b/.github/workflows/docker-image-simple.yml
@@ -1,8 +1,8 @@
 name: docker-image-simple
 
 on:
-  schedule:
-    - cron: '0 2 * * *' # Scheduled runs every day at 2am UTC
+  #schedule:
+  #  - cron: '0 2 * * *' # Scheduled runs every day at 2am UTC
   workflow_dispatch:
 
 jobs:
