--- a/.github/workflows/firmware-simple.yml
+++ b/.github/workflows/firmware-simple.yml
@@ -1,6 +1,8 @@
 name: firmware-simple
 
 on:
+  schedule:
+    - cron: '0 2 * * *' # Scheduled runs every day at 2am UTC
   workflow_dispatch:
 
 jobs:
@@ -24,9 +26,9 @@ jobs:
       - name: Checkout build repo
         uses: actions/checkout@v3 # We don't need to clone git, really. A wget would suffice for GH-hosted runners. But using clone is better for Igor-hosted runners.
         with:
-          repository: ${{ github.repository_owner }}/armbian-build
+          repository: armbian/build #${{ github.repository_owner }}/armbian-build
+          ref: armbian-next
           fetch-depth: 1
-          ref: extensions # extensions has cloud-init, etc used here for demo purposes
           clean: false # true is default. it *will* delete the hosts /dev if mounted inside.
 
       - name: Build firmware (small)
