back to extensions branch; force OCI_TARGET_BASE to my own repo for image builds

--- a/.github/workflows/docker-image-simple.yml
+++ b/.github/workflows/docker-image-simple.yml
@@ -37,7 +37,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: ${{ github.repository_owner }}/armbian-build
-          ref: extensions # branch to build from.
+          ref: extensions
           clean: true # true is default. it *will* delete the hosts /dev if mounted inside.
 
       - name: Set up QEMU
