--- a/.github/workflows/kernel-simple.yml
+++ b/.github/workflows/kernel-simple.yml
@@ -178,8 +178,8 @@ jobs:
       - name: Checkout build repo
         uses: actions/checkout@v3 # We don't need to clone git, really. A wget would suffice for GH-hosted runners. But using clone is better for Igor-hosted runners.
         with:
-          repository: armbian/build #${{ github.repository_owner }}/armbian-build
-          ref: armbian-next
+          repository: ${{ github.repository_owner }}/armbian-build
+          ref: extensions
           fetch-depth: 1
           clean: false # true is default. it *will* delete the hosts /dev if mounted inside.
 
