--- a/.github/workflows/image-simple.yml
+++ b/.github/workflows/image-simple.yml
@@ -360,6 +360,7 @@ jobs:
     runs-on: "${{ matrix.runner_tags }}"
     name: "${{ matrix.aa }} ${{ matrix.desc }}"
     env:
+      OCI_TARGET_BASE: "ghcr.io/${{ github.repository }}/" # This is picked up by the Docker launcher automatically
       BOARD: "${{ matrix.board }}"
       VARIANT: "${{ matrix.variant }}"
       EXTRA: "'DONT_BUILD_ARTIFACTS=kernel,firmware,full_firmware,rootfs' COMPRESS_OUTPUTIMAGE=xz "
@@ -369,7 +370,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: ${{ github.repository_owner }}/armbian-build
-          ref: extensions # branch to build from.
+          ref: extensions
           clean: false # true is default. it *will* delete the hosts /dev if mounted inside.
 
       - name: Build board ${{ matrix.board }}
