--- a/.github/workflows/firmware-simple.yml
+++ b/.github/workflows/firmware-simple.yml
@@ -2,8 +2,10 @@ name: firmware-simple
 
 on:
   schedule:
-    - cron: '0 2 * * *' # Scheduled runs every day at 2am UTC
+    - cron: '0 1 * * *' # Scheduled runs every day at 1am UTC
   workflow_dispatch:
+  workflow_call: 
+    
 
 jobs:
 
