--- a/.github/workflows/uboot-simple.yml
+++ b/.github/workflows/uboot-simple.yml
@@ -4,8 +4,8 @@ on:
   schedule:
     - cron: '0 1 * * *' # Scheduled runs every day at 2am UTC
   workflow_dispatch:
-  workflow_call: 
-    
+  workflow_call:
+
 
 jobs:
 
@@ -54,6 +54,7 @@ jobs:
       BRANCH: "${{ matrix.branch }}"
       VARIANT: "${{ matrix.variant }}"
       OCI_TARGET_BASE: "ghcr.io/${{ github.repository }}/" # This is picked up by the Docker launcher automatically
+      DOCKER_ARMBIAN_BASE_COORDINATE_PREFIX: "ghcr.io/${{ github.repository }}:armbian-next-" # Use Docker image in same repo
     steps:
 
       # Login to ghcr.io, for later uploading rootfs to ghcr.io
