try to use my own docker image on my own builds; makes sense, right? replace sid with bookworm

--- a/.github/workflows/docker-image-simple.yml
+++ b/.github/workflows/docker-image-simple.yml
@@ -20,10 +20,10 @@ jobs:
           #  release: "kinetic"
           - os: "debian"
             release: "bullseye"
-          - os: "debian"
-            release: "sid"
           #- os: "debian"
-          #  release: "bookworm"
+          #  release: "sid"
+          - os: "debian"
+            release: "bookworm"
           #- os: "ubuntu"
           #  release: "focal" # to make sure -- not really "supported"
           - os: "ubuntu"
