--- a/.github/workflows/docker-image-simple.yml
+++ b/.github/workflows/docker-image-simple.yml
@@ -1,9 +1,10 @@
 name: docker-image-simple
 
 on:
-  #schedule:
-  #  - cron: '0 2 * * *' # Scheduled runs every day at 2am UTC
+  schedule:
+    - cron: '30 0 * * *' # Scheduled runs every day at 0:30am UTC
   workflow_dispatch:
+  workflow_call:
 
 jobs:
 
