--- a/.github/workflows/rootfs-simple.yml
+++ b/.github/workflows/rootfs-simple.yml
@@ -4,8 +4,8 @@ on:
   schedule:
     - cron: '0 1 * * *' # Scheduled runs every day at 1am UTC
   workflow_dispatch:
-  workflow_call: 
-    
+  workflow_call:
+
 
 jobs:
 
@@ -133,6 +133,9 @@ jobs:
       ARCH: "${{ matrix.arch }}"
       VARIANT: "${{ matrix.variant }}"
       OCI_TARGET_BASE: "ghcr.io/${{ github.repository }}/" # This is picked up by the Docker launcher automatically
+
+      DOCKER_ARMBIAN_BASE_COORDINATE_PREFIX: "ghcr.io/${{ github.repository }}:armbian-next-" # Use Docker image in same repo
+      DOCKER_SKIP_UPDATE: "yes" # Do not apt update/install/requirements/etc during Dockerfile build, trust DOCKER_ARMBIAN_BASE_COORDINATE_PREFIX's images are up-to-date
     steps:
 
       # Login to ghcr.io, for later uploading rootfs to ghcr.io
