--- a/.github/workflows/uboot-simple.yml
+++ b/.github/workflows/uboot-simple.yml
@@ -15,6 +15,10 @@ jobs:
       fail-fast: false # let other jobs try to complete if one fails
       matrix:
         include:
+          - board: "mekotronics-r58"
+            branch: "legacy"
+            runner_tags: ubuntu-latest #[ "self-hosted", "Linux", 'armbian', "artifact-uboot" ]
+            variant: "" # empty
           - board: "odroidn2"
             branch: "edge"
             runner_tags: ubuntu-latest #[ "self-hosted", "Linux", 'armbian', "artifact-uboot" ]
